--- a/apps/base/matrix/manifest.yaml
+++ b/apps/base/matrix/manifest.yaml
@@ -47,7 +47,7 @@ spec:
         enabled: true
       registration:
         enabled: false
-        existingSecret: "matrix-sharedSecret"
+        existingSecret: "matrix-shared-secret"
         secretKey: "registrationSharedSecret"
       serve_server_wellknown: true
 
