matrix: further defined cronjobs

--- a/apps/base/matrix/manifest.yaml
+++ b/apps/base/matrix/manifest.yaml
@@ -62,6 +62,8 @@ spec:
         secretKey: "S3_SECRET_KEY"
       cronjob:
         enabled: true
+        schedule: "0 0 * * *"
+        file_age: 2m
 
     postgresql:
       enabled: false
