--- a/apps/base/matrix/manifest.yaml
+++ b/apps/base/matrix/manifest.yaml
@@ -51,15 +51,15 @@ spec:
         secretKey: "registrationSharedSecret"
       serve_server_wellknown: true
 
-    s3:
-      # Enable S3 storage via synapse-s3-storage-provider
-      enabled: true
-      endpoint: "http://192.168.178.58:9000"
-      bucket: "matrix-media"
-      existingSecret: "matrix-minio"
-      secretKeys:
-        accessKey: "S3_ACCESS_KEY"
-        secretKey: "S3_SECRET_KEY"
+    # s3:
+    #   # Enable S3 storage via synapse-s3-storage-provider
+    #   enabled: true
+    #   endpoint: "http://192.168.178.58:9000"
+    #   bucket: "matrix-media"
+    #   existingSecret: "matrix-minio"
+    #   secretKeys:
+    #     accessKey: "S3_ACCESS_KEY"
+    #     secretKey: "S3_SECRET_KEY"
       # cronjob:
       #   enabled: true
       #   schedule: "0 0 * * *"
