--- a/apps/base/matrix/manifest.yaml
+++ b/apps/base/matrix/manifest.yaml
@@ -7,11 +7,11 @@ metadata:
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: matrix
+  name: synapse
   namespace: matrix
 spec:
   interval: 5m0s
-  url: https://small-hack.github.io/matrix-chart
+  url: https://ananace.gitlab.io/charts
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -31,25 +31,42 @@ spec:
       retries: 3
   chart:
     spec:
-      chart: matrix
-      version: "20.0.0"
+      chart: matrix-synapse
+      version: "3.12.5"
       sourceRef:
         kind: HelmRepository
-        name: matrix
+        name: synapse
         namespace: matrix
       interval: 12h
   values:
-    matrix:
-      serverName: "vandelocht.uk"
-      hostname: "matrix.vandelocht.uk"
-      adminEmail: "jan@vandelocht.uk"
-      federation:
-        enabled: true
-      registration:
-        enabled: false
-        existingSecret: "matrix-shared-secret"
-        secretKey: "registrationSharedSecret"
-      serve_server_wellknown: true
+    serverName: vandelocht.uk
+    publicServerName: matrix.vandelocht.uk
+    wellknown:
+      enabled: true
+    postgresql:
+      enabled: false
+    externalPostgresql:
+      host: matrix-postgres-cluster-rw
+      port: 5432
+      username: matrix
+      existingSecret: matrix-cnpg
+      existingSecretPasswordKey: password
+    ingress:
+      traefikPaths: true
+
+
+
+
+    ####
+    # matrix:
+    #   adminEmail: "jan@vandelocht.uk"
+    #   federation:
+    #     enabled: true
+    #   registration:
+    #     enabled: false
+    #     existingSecret: "matrix-shared-secret"
+    #     secretKey: "registrationSharedSecret"
+    #   serve_server_wellknown: true
 
     # s3:
     #   # Enable S3 storage via synapse-s3-storage-provider
@@ -65,17 +82,17 @@ spec:
       #   schedule: "0 0 * * *"
       #   file_age: 2m
 
-    postgresql:
-      enabled: false
-    externalDatabase:
-      enabled: true
-      existingSecret: matrix-cnpg
+    # postgresql:
+    #   enabled: false
+    # externalDatabase:
+    #   enabled: true
+    #   existingSecret: matrix-cnpg
       # if externalDatabase.existingSecret is provided, the following are ignored
       # password, username, hostname, database
       # secretKeys to grab from existingSecret
 
-    element:
-      enabled: false
+    # element:
+    #   enabled: false
 ---
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
