matrix: fixed database

--- a/apps/base/matrix/manifest.yaml
+++ b/apps/base/matrix/manifest.yaml
@@ -104,7 +104,7 @@ spec:
   imageName: ghcr.io/cloudnative-pg/postgresql:17
   bootstrap:
     initdb:
-      database: matrix
+      database: synapse
       owner: matrix
       secret:
         name: matrix-cnpg
