--- a/apps/base/matrix/kustomization.yaml
+++ b/apps/base/matrix/kustomization.yaml
@@ -1,4 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - manifest.yaml
+  - synapse-manifest.yaml
+  - synapse-admin-manifest.yaml
