--- a/apps/production/matrix/ingressConfig.yaml
+++ b/apps/production/matrix/ingressConfig.yaml
@@ -32,3 +32,17 @@ spec:
   commonName: "matrix.vandelocht.uk"
   dnsNames:
     - "matrix.vandelocht.uk"
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: admin-vandelocht-uk
+  namespace: matrix
+spec:
+  secretName: admin-vandelocht-uk-production-tls
+  issuerRef:
+    name: letsencrypt-production
+    kind: ClusterIssuer
+  commonName: "admin.vandelocht.uk"
+  dnsNames:
+    - "admin.vandelocht.uk"
