--- a/apps/production/matrix/matrix-redis.yaml
+++ b/apps/production/matrix/matrix-redis.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: matrix-minio
+    name: matrix-redis
     namespace: matrix
 stringData:
     redis-password: ENC[AES256_GCM,data:n5RNWK+XkjF/oliDaek/JdRKIVivi+zclWQsvgB46HjGVs+lfkFUAg==,iv:vgl9aC7nvT/n/WHm+FoQ7Xn39QXrWlS7ZRSul+CQMeY=,tag:iWZ9hhpbjF0+FHkYWeI3Wg==,type:str]
@@ -9,13 +9,13 @@ sops:
     age:
         - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
           enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrdG9TMEVsMktyMHIwOVA4
-            ekplYTdMWkNac3Z5aXFrU3cxb3A4ZU45cmhrClhXdUpqdHE1YUhreEg5WDgxUFRW
-            dDFPRmJXOHNmdXZwTjgxSjlVZUxXRmMKLS0tIE5qb2p1WHJqdUFzZVZKNUhmdkZj
-            OW1vSXFkM0JjTXpJc20zL1BTOTlpbkkKmtne/73f6mHEqoYpdbxntZgBQB8d5a1U
-            h9zTNOZoZLYp4OYAn2fS/urxZHa6O3NFXZEeRNKcDkxYIgrieyIKPw==
-            -----END AGE ENCRYPTED FILE-----
+              -----BEGIN AGE ENCRYPTED FILE-----
+              YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrdG9TMEVsMktyMHIwOVA4
+              ekplYTdMWkNac3Z5aXFrU3cxb3A4ZU45cmhrClhXdUpqdHE1YUhreEg5WDgxUFRW
+              dDFPRmJXOHNmdXZwTjgxSjlVZUxXRmMKLS0tIE5qb2p1WHJqdUFzZVZKNUhmdkZj
+              OW1vSXFkM0JjTXpJc20zL1BTOTlpbkkKmtne/73f6mHEqoYpdbxntZgBQB8d5a1U
+              h9zTNOZoZLYp4OYAn2fS/urxZHa6O3NFXZEeRNKcDkxYIgrieyIKPw==
+              -----END AGE ENCRYPTED FILE-----
     lastmodified: "2025-08-09T19:58:02Z"
     mac: ENC[AES256_GCM,data:S53BSVr9UtkQwqEa23jzSpc/KpzEiQwW7d9pDZr9mJwnaBM4rd7Ui8hVdkj6E9IwFjN/5xHAt5QOXcZtzmlVJumCr+aRMxBvNnGJOsIpZx4agBdATW4fAgVibTA2HNMqc6q5TZ6Q0fFwJwArHApSXpKo1KX9sk33z3CHC72+EM4=,iv:MjptHSIXTHi/jSF8kgBGI/1/IFyUUfyZyrQgeMhGxs8=,tag:G/pGLkqpu/ocI/Kt5BLcww==,type:str]
     encrypted_regex: ^(data|stringData)$
