matrix fixed secret name for redis
matrix: fixed secret name

--- a/apps/base/matrix/synapse-manifest.yaml
+++ b/apps/base/matrix/synapse-manifest.yaml
@@ -57,7 +57,7 @@ spec:
         enabled: true
         ## Or use existing secret with "redis-password" key
         ## instead of static password
-        existingSecret: redis-secret
+        existingSecret: matrix-redis
     ingress:
       traefikPaths: true
       tls:
