--- a/apps/base/matrix/synapse-admin-manifest.yaml
+++ b/apps/base/matrix/synapse-admin-manifest.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: matrix
 spec:
   interval: 5m0s
-  url: https://bjw-s.github.io/helm-charts
+  url: https://bjw-s-labs.github.io/helm-charts
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
