deactivated openwebui and searxng

--- a/clusters/staging/apps/kustomization.yaml
+++ b/clusters/staging/apps/kustomization.yaml
@@ -4,6 +4,6 @@ resources:
   - immich.yaml
   - matrix.yaml
   - endurain.yaml
-  - openwebui.yaml
-  - searxng.yaml
+  # - openwebui.yaml
+  # - searxng.yaml
   - website.yaml
