--- a/apps/base/matrix/element-manifest.yaml
+++ b/apps/base/matrix/element-manifest.yaml
@@ -37,5 +37,5 @@ spec:
           hosts:
             - chat.vandelocht.uk
       annotations:
-        kubernetes.io/ingress.class: traefik-external
+        kubernetes.io/ingress.class: traefik
         cert-manager.io/cluster-issuer: letsencrypt-production
