matrix: added mautrix-whatsapp bridge

--- a/apps/base/matrix/kustomization.yaml
+++ b/apps/base/matrix/kustomization.yaml
@@ -4,3 +4,4 @@ resources:
   - synapse-manifest.yaml
   - element-manifest.yaml
   - synapse-admin-manifest.yaml
+  - mautrix-whatsapp-manifest.yaml
