mautrix: added accesmode for pvc

--- a/apps/base/matrix/mautrix-whatsapp-manifest.yaml
+++ b/apps/base/matrix/mautrix-whatsapp-manifest.yaml
@@ -92,6 +92,7 @@ spec:
         type: persistentVolumeClaim
         storageClass: ceph-csi-rbd
         size: 1Gi
+        accessMode: ReadWriteOnce
         globalMounts:
           - path: /data
             subPath: bridge-data
