--- a/apps/base/matrix/mautrix-whatsapp-manifest.yaml
+++ b/apps/base/matrix/mautrix-whatsapp-manifest.yaml
@@ -30,7 +30,7 @@ spec:
                 containers:
                     app:
                         image:
-                            repository: ghcr.io/mautrix/whatsapp
+                            repository: dock.mau.dev/mautrix/whatsapp
                             tag: v0.12.3
                         env:
                             MAUTRIX_WHATSAPP_CONFIG_PATH: /data/config.yaml
