--- a/apps/base/matrix/kustomization.yaml
+++ b/apps/base/matrix/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - synapse-manifest.yaml
+  - mautrix-manifest.yaml
   - element-manifest.yaml
   - synapse-admin-manifest.yaml
