Matrix: Configured Mautrix Whatsapp

--- a/apps/base/matrix/kustomization.yaml
+++ b/apps/base/matrix/kustomization.yaml
@@ -3,5 +3,7 @@ kind: Kustomization
 resources:
   - synapse-manifest.yaml
   - mautrix-manifest.yaml
+  - mautrix-config.yaml
+  - mautrix-registration-secret.yaml
   - element-manifest.yaml
   - synapse-admin-manifest.yaml
