--- a/apps/base/matrix/mautrix-manifest.yaml
+++ b/apps/base/matrix/mautrix-manifest.yaml
@@ -24,14 +24,104 @@ spec:
   values:
     controllers:
       mautrix-whatsapp:
+        type: statefulset
         containers:
           app:
             image:
               repository: dock.mau.dev/mautrix/whatsapp
               tag: v0.12.3
+            args:
+              - --no-update
+            env:
+              AS_TOKEN:
+                valueFrom:
+                  secretKeyRef:
+                    name: mautrix-whatsapp
+                    key: as_token
+              HS_TOKEN:
+                valueFrom:
+                  secretKeyRef:
+                    name: mautrix-whatsapp
+                    key: hs_token
+              SERVER_KEY:
+                valueFrom:
+                  secretKeyRef:
+                    name: mautrix-whatsapp
+                    key: server_key
+              SHARED_SECRET:
+                valueFrom:
+                  secretKeyRef:
+                    name: mautrix-whatsapp
+                    key: shared_secret
+              SIGNING_KEY:
+                valueFrom:
+                  secretKeyRef:
+                    name: mautrix-whatsapp
+                    key: signing_key
+              PICKLE_KEY:
+                valueFrom:
+                  secretKeyRef:
+                    name: mautrix-whatsapp
+                    key: pickle_key
+              DB_PASSWORD:
+                valueFrom:
+                  secretKeyRef:
+                    name: mautrix-whatsapp-cnpg
+                    key: password
+            probes:
+              liveness:
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /_matrix/mau/live
+                    port: 29318
+              readiness:
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /_matrix/mau/ready
+                    port: 29318
     service:
       app:
         controller: mautrix-whatsapp
+        publishNotReadyAddresses: true
         ports:
           http:
             port: 29318
+    persistence:
+      config:
+        type: configMap
+        name: mautrix-whatsapp-config
+        globalMounts:
+          - path: /data/config.yaml
+            subPath: config.yaml
+            readOnly: true
+      registration:
+        type: secret
+        name: mautrix-whatsapp-registration
+        globalMounts:
+          - path: /data/registration.yaml
+            subPath: registration.yaml
+            readOnly: true
+---
+apiVersion: postgresql.cnpg.io/v1
+kind: Cluster
+metadata:
+  name: mautrix-whatsapp-postgres-cluster
+  namespace: matrix
+spec:
+  instances: 3
+  imageName: ghcr.io/cloudnative-pg/postgresql:17
+  bootstrap:
+    initdb:
+      database: whatsapp
+      owner: whatsapp
+      secret:
+        name: mautrix-whatsapp-cnpg
+
+  storage:
+    size: 10Gi
+  monitoring:
+    enablePodMonitor: true
