--- a/apps/base/matrix/synapse-manifest.yaml
+++ b/apps/base/matrix/synapse-manifest.yaml
@@ -65,6 +65,18 @@ spec:
           hosts:
             - vandelocht.uk
             - matrix.vandelocht.uk
+    config:
+      app_service_config_files:
+        - /data/registration.yaml
+    extraVolumes:
+      - name: mautrix-whatsapp-registration
+        secret:
+          secretName: mautrix-whatsapp-registration
+    extraVolumeMounts:
+      - name: mautrix-whatsapp-registration
+        mountPath: /data/registration.yaml
+        subPath: registration.yaml
+        readOnly: true
 ---
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
