--- a/apps/production/matrix/kustomization.yaml
+++ b/apps/production/matrix/kustomization.yaml
@@ -7,3 +7,5 @@ resources:
   - matrix-minio.yaml
   - matrix-redis.yaml
   - matrix-registration.yaml
+  - mautrix-whatsapp-postgresql.yaml
+  - mautrix-whatsapp.yaml
