--- a/apps/production/matrix/kustomization.yaml
+++ b/apps/production/matrix/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
   - matrix-postgresql.yaml
   - matrix-minio.yaml
   - matrix-redis.yaml
-  - matrix-registration.yaml
-  - mautrix-whatsapp-postgresql.yaml
-  - mautrix-whatsapp.yaml
+  # - matrix-registration.yaml
+  # - mautrix-whatsapp-postgresql.yaml
+  # - mautrix-whatsapp.yaml
