--- a/apps/base/matrix/mautrix-config.yaml
+++ b/apps/base/matrix/mautrix-config.yaml
@@ -260,7 +260,7 @@ data:
             #           https://github.com/mattn/go-sqlite3#connection-string
             #   Postgres: Connection string. For example, postgres://user:password@host/database?sslmode=disable
             #             To connect via Unix socket, use something like postgres:///dbname?host=/var/run/postgresql
-            uri: postgres://whatsapp:${DB_PASSWORD}@mautrix-whatsapp-postgres-cluster-rw:5432/whatsapp?sslmode=disable
+            uri: $DB_URI
             # Maximum number of connections.
             max_open_conns: 5
             max_idle_conns: 1
