mautrix whatsapp: changed config.yaml into a secret and filled in all secret values
forgot to rename reference

--- a/apps/base/matrix/mautrix-manifest.yaml
+++ b/apps/base/matrix/mautrix-manifest.yaml
@@ -30,42 +30,6 @@ spec:
             image:
               repository: dock.mau.dev/mautrix/whatsapp
               tag: v0.12.3
-            env:
-              AS_TOKEN:
-                valueFrom:
-                  secretKeyRef:
-                    name: mautrix-whatsapp
-                    key: as_token
-              HS_TOKEN:
-                valueFrom:
-                  secretKeyRef:
-                    name: mautrix-whatsapp
-                    key: hs_token
-              SERVER_KEY:
-                valueFrom:
-                  secretKeyRef:
-                    name: mautrix-whatsapp
-                    key: server_key
-              SHARED_SECRET:
-                valueFrom:
-                  secretKeyRef:
-                    name: mautrix-whatsapp
-                    key: shared_secret
-              SIGNING_KEY:
-                valueFrom:
-                  secretKeyRef:
-                    name: mautrix-whatsapp
-                    key: signing_key
-              PICKLE_KEY:
-                valueFrom:
-                  secretKeyRef:
-                    name: mautrix-whatsapp
-                    key: pickle_key
-              DB_URI:
-                valueFrom:
-                  secretKeyRef:
-                    name: mautrix-whatsapp
-                    key: uri
             probes:
               liveness:
                 enabled: true
@@ -90,7 +54,7 @@ spec:
             port: 29318
     persistence:
       config:
-        type: configMap
+        type: secret
         name: mautrix-whatsapp-config
         globalMounts:
           - path: /data/config.yaml
