matrix: changed matrix config to actually discover the registration.yaml file
fixed indent

--- a/apps/base/matrix/synapse-manifest.yaml
+++ b/apps/base/matrix/synapse-manifest.yaml
@@ -65,7 +65,7 @@ spec:
           hosts:
             - vandelocht.uk
             - matrix.vandelocht.uk
-    config:
+    extraConfig:
       app_service_config_files:
         - /synapse/config/conf.d/registration.yaml
     synapse:
