matrix: changed synapse update strategy to Recreate

--- a/apps/base/matrix/synapse-manifest.yaml
+++ b/apps/base/matrix/synapse-manifest.yaml
@@ -69,6 +69,8 @@ spec:
       app_service_config_files:
         - /synapse/config/conf.d/registration.yaml
     synapse:
+      strategy:
+        type: Recreate
       extraVolumes:
         - name: mautrix-whatsapp-registration
           secret:
