matrix: reenabled bridge secret

--- a/apps/base/matrix/kustomization.yaml
+++ b/apps/base/matrix/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   - synapse-manifest.yaml
   # - mautrix-manifest.yaml
   # - mautrix-config.yaml
-  # - mautrix-registration-secret.yaml
+  - mautrix-registration-secret.yaml
   - element-manifest.yaml
   - synapse-admin-manifest.yaml
 secretGenerator:
