--- a/apps/base/matrix/kustomization.yaml
+++ b/apps/base/matrix/kustomization.yaml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - synapse-manifest.yaml
-  # - mautrix-manifest.yaml
-  # - mautrix-config.yaml
+  - mautrix-manifest.yaml
+  - mautrix-config.yaml
   - mautrix-registration-secret.yaml
   - element-manifest.yaml
   - synapse-admin-manifest.yaml
