--- a/clusters/staging/apps/kustomization.yaml
+++ b/clusters/staging/apps/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - immich.yaml
   - matrix.yaml
+  - ntfy.yaml
   - endurain.yaml
   # - openwebui.yaml
   # - searxng.yaml
