--- a/apps/base/ntfy/manifest.yaml
+++ b/apps/base/ntfy/manifest.yaml
@@ -12,7 +12,7 @@ metadata:
 spec:
   interval: 5m0s
   type: "oci"
-  url: oci://codeberg.org/wrenix/helm-charts/ntfy
+  url: oci://codeberg.org/wrenix/helm-charts
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
