--- a/apps/base/matrix/mautrix-signal-manifest.yaml
+++ b/apps/base/matrix/mautrix-signal-manifest.yaml
@@ -1,73 +1,73 @@
-# apiVersion: helm.toolkit.fluxcd.io/v2
-# kind: HelmRelease
-# metadata:
-#   name: mautrix-signal
-#   namespace: matrix
-# spec:
-#   interval: 30m
-#   timeout: 20m
-#   chart:
-#     spec:
-#       chart: app-template
-#       version: "4.2.0"
-#       sourceRef:
-#         kind: HelmRepository
-#         name: bjw-s
-#         namespace: matrix
-#       interval: 12h
-#   install:
-#     remediation:
-#       retries: 3
-#   upgrade:
-#     cleanupOnFail: true
-#     remediation:
-#       retries: 3
-#   values:
-#     controllers:
-#       mautrix-signal:
-#         type: statefulset
-#         containers:
-#           app:
-#             image:
-#               repository: dock.mau.dev/mautrix/signal
-#               tag: v0.8.5
-#             probes:
-#               liveness:
-#                 enabled: true
-#                 custom: true
-#                 spec:
-#                   httpGet:
-#                     path: /_matrix/mau/live
-#                     port: 29318
-#               readiness:
-#                 enabled: true
-#                 custom: true
-#                 spec:
-#                   httpGet:
-#                     path: /_matrix/mau/ready
-#                     port: 29318
-#     service:
-#       app:
-#         controller: mautrix-signal
-#         publishNotReadyAddresses: true
-#         ports:
-#           http:
-#             port: 29318
-#     persistence:
-#       config:
-#         type: secret
-#         name: mautrix-signal-config
-#         globalMounts:
-#           - path: /data/config.yaml
-#             subPath: config.yaml
-#             readOnly: true
-#       registration:
-#         type: secret
-#         name: mautrix-signal-registration
-#         globalMounts:
-#           - path: /data/registration.yaml
-#             subPath: registration.yaml
-#             readOnly: true
+apiVersion: helm.toolkit.fluxcd.io/v2
+kind: HelmRelease
+metadata:
+  name: mautrix-signal
+  namespace: matrix
+spec:
+  interval: 30m
+  timeout: 20m
+  chart:
+    spec:
+      chart: app-template
+      version: "4.2.0"
+      sourceRef:
+        kind: HelmRepository
+        name: bjw-s
+        namespace: matrix
+      interval: 12h
+  install:
+    remediation:
+      retries: 3
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 3
+  values:
+    controllers:
+      mautrix-signal:
+        type: statefulset
+        containers:
+          app:
+            image:
+              repository: dock.mau.dev/mautrix/signal
+              tag: v0.8.5
+            probes:
+              liveness:
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /_matrix/mau/live
+                    port: 29318
+              readiness:
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /_matrix/mau/ready
+                    port: 29318
+    service:
+      app:
+        controller: mautrix-signal
+        publishNotReadyAddresses: true
+        ports:
+          http:
+            port: 29318
+    persistence:
+      config:
+        type: secret
+        name: mautrix-signal-config
+        globalMounts:
+          - path: /data/config.yaml
+            subPath: config.yaml
+            readOnly: true
+      registration:
+        type: secret
+        name: mautrix-signal-registration-2
+        globalMounts:
+          - path: /data/registration.yaml
+            subPath: registration.yaml
+            readOnly: true
 ---
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
