--- a/clusters/staging/infrastructure/auth/kustomization.yaml
+++ b/clusters/staging/infrastructure/auth/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - keycloak.yaml
+  - authentik.yaml
   - oauth2proxy.yaml
